# Expediente-Medico-Digital

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  REQUISITOS_OPENCODE.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
app/: main.py  pdf_generator.py  storage.py
database/: LOCATIONS_README.md  costa_rica_locations.json
static/: app.js  styles.css
templates/: base.html  change_password.html  doctor.html  encounter_detail.html  forms_completed_list.html  image_viewer.html  link_unavailable.html  login.html  patient.html  patient_search.html  patients_list.html  share_pdf.html  thank_you.html  thanks.html  user_form.html  users_list.html
tests/: complete_test.py  comprehensive_test.py  debug2.py  debug3.py  debug_flow.py  debug_form.py  debug_login.py  test_comprehensive.py  test_flow.py  test_minimal.py  test_password.py  test_pdf_generator.py  test_suite.py  tmp_debug.py
tools/: README.md  check_admin.py  check_db.py  check_permissions.py  clean_temp.py  delete_demo_data.py  seed_demo_data.py  smoke_test.py
