[project]
name = "expediente-medico-digital"
version = "1.0.0"
description = "Sistema web para formularios médicos digitales"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 180

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]

# Allow long lines and certain patterns common in FastAPI apps
ignore = [
    "E501",  # line too long (we use 180)
    "S101",  # assert allowed in tests
    "S311",  # standard pseudo-random generators are fine for tokens in this app
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
